[feat] 同步 liteboty 0.2: 使用 Msg 对象发布消息，使用 protobuf 传输

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "liteboty-stream"
-version = "0.1.1"
+version = "0.2.0"
 description = ""
 authors = ["yejue <1145331931@qq.com>"]
 readme = "README.md"
@@ -12,7 +12,8 @@ python = "^3.10"
 PySide6 = "^6.8.1.1"
 redis = "^5.2.1"
 pillow = "^11.0.0"
-click = "8.1.7"
+click = "^8.1.7"
+liteboty = ">=0.2, <0.3"
 
 [build-system]
 requires = ["poetry-core"]
